# dotfiles

./: .aliases  .env.sample  .gitconfig  .gitignore  .tmux.conf  .zshrc  Argcfile.sh  CLAUDE.md  README.md  build.ts  copy-static.ts  package.json  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
.claude/hooks/: bash_command_validator.py  notification-hook.sh
.claude/mcp/search/: index.ts  package.json  tsconfig.json
.familiar/oblivion/: .gitignore  Argcfile.sh  schema.sql
.familiar/prompts/: oblivion-projects.json  oblivion-starters.json
.familiar/tools/notebook/: main.ts  package.json
.familiar/tools/uithub/: package.json
claude/: CLAUDE.template.md  claude-code-examples.ts  claude-code-types-summary.md  explore-types.ts  settings.json
clod/: CLAUDE.md  __init__.py  cli.py  desktop.py  hooks.py  package.json  sfx.py  tmux.py
mcp/: build.ts  package.json  tsconfig.json  types.ts
mcp/servers/search/: build.ts  index.ts  package.json
